--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="ten columns">
         <h2>Brendan Albano</h2>
-        <p>Intern architect</p>
+        <p>Architectural Associate</p>
       </div>
     </div>
 
