--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="ten columns">
         <h2>Brendan Albano</h2>
-        <p>Architectural Associate</p>
+        <p>I’m an architectural designer passionate about building science, fluent in BIM, and equally invested in high level design concepts and nitty gritty details.</p>
       </div>
     </div>
 
@@ -52,15 +52,15 @@
     <div class="row">
       <div class="four columns offset-by-two columns">
         <ul>
-          <li>Buildings</li>
-          <li>Building performance</li>
-          <li>Performance art</li>
+          <li>Backpacking</li>
+          <li>Bicycles</li>
+          <li>Woodworking</li>
         </ul>
       </div>
       <div class="four columns">
         <ul>
-          <li>Backpacking</li>
-          <li>Woodworking</li>
+          <li>Sewing</li>
+          <li>Computers</li>
           <li>Games</li>
         </ul>
       </div>
