--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 # You don't need to edit this file, it's empty on purpose.
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+# Renamed from index.md to index.html to make pagination work.
 layout: home
 ---
