--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 # Renamed from index.md to index.html to make pagination work.
+title: Home
 layout: home
 ---
