--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 title: Home
 ---
 
-<h2>Welcome</h2>
+<h2>Welcome to my blog!</h2>
 
-<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
+<p>I mostly write about tabletop games, art, baking and my feelings.</p>
 
-<p>Welcome to my blog!</p>
-
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
-
-<h2>Posts</h2>
+<h2>Read a Recent Post</h2>
 $partial("templates/post-list.html")$
 
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+<p>…or seek ancient posts in the <a href="/archive.html">archives</a>.</p>
